# swag

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  main.cpp
aiecad/core/: Application.cpp  Layer.hpp
aiecad/core/events/: EventSubscription.hpp
cmake/: AIECAD_Tests.cmake  ProjectDeps.cmake
cmake/checks/: AIECADPlatformChecks.cmake
sandbox/: CMakeLists.txt
